major major update
1) kore updated

2) css added

3) graphics updated

--- a/kore/config.json
+++ b/kore/config.json
@@ -74,6 +74,7 @@
 		"<true>": ["green",""],
 		"<removed>": ["bright_red", ""],
 		"<created>": ["bright_green", ""],
-		"<track_num>": ["12",""]
+		"<track_num>": ["12",""],
+		"<connection>": ["87", ""]
 	}
 }
